# led-matrix-platform-signs

./: .gitignore  LICENSE  README.md  led-matrices.md
art/: creature0.pbm  outside0.pbm
daktronics/: README.md  controller.md  led-matrices.md  mechanical.md  sbc.md  stand.scad
daktronics/matrix-controller-esp32/: .gitignore  Cargo.toml  README.md
daktronics/matrix-controller-esp32/.cargo/: config.toml
daktronics/matrix-controller-esp32/src/: captive.rs  matrix_parl_io.rs  matrix_spi.rs
daktronics/matrix-controller-esp32/src/web/: index.html
hw05-led-matrix-sign-controller/: dak_if.kicad_sch  hw05-led-matrix-sign-controller.kicad_prl  hw05-led-matrix-sign-controller.kicad_pro  hw05-led-matrix-sign-controller.kicad_sch  sw-button.kicad_sch
matrix-controller-esp32/: Cargo.toml  bad_apple.rgb
matrix-controller-esp32/src/: config.rs  lib.rs  matrix.rs  matrix_parl_io.rs  matrix_spi.rs  net_utils.rs  network.rs
sunrise-nxtp/: README.md  sunrise-nxtp-micropython.py
sunrise-nxtp/rpi-pico-controller/: rpi-pico-controller.kicad_prl  rpi-pico-controller.kicad_pro  rpi-pico-controller.kicad_sch
