[package]
edition = "2021"
name    = "matrix-controller-esp32"
version = "0.1.0"

[[bin]]
name = "matrix-controller-esp32"
path = "./src/bin/main.rs"
test = false

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32c6"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "nightly"
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32c6"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embassy-sync = "0.7.0"
derive_more = { version = "2.0.1", default-features = false, features = ["deref", "deref_mut", "index", "index_mut"] }
bitfield = "0.19.1"
edge-dhcp = { version = "0.6.0", features = ["defmt"] }
edge-nal = "0.5.0"
edge-nal-embassy = { version = "0.6.0", features = ["defmt"] }
edge-captive = { version = "0.6.0", features = ["defmt"] }
heapless = "0.8.0"
esp-storage = { version = "0.6.0", features = ["esp32c6"] }
embedded-storage = "0.3.1"
percent-encoding = { version = "2.3.1", default-features = false }
embedded-text = "0.7.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
